# [1.4.0]
  - Añadida página de facturación para clientes
  - Exportación de hoja de calculo del 347 de clientes
  - Añadido numero de facturas pendientes al listado de clientes
  
# [1.3.3] - 13/08/2021
  - Actualización de librerias

# [1.3.2] - 21/07/2021
  - Añadida columna de precio de coste a la página de cambio de precios
  - Corregidos componentes deprecados

# [1.3.1] - 10/07/2021
  - Añadido limite de 10 elementos a la lista de pagarés

# [1.3.0] - 13/06/2021
  - Añadido modal para editar la información del pago de la factura
  - Al añadir un albarán a una factura de cliente, se hace scroll al nuevo albarán
  - Corregido undefined en las gráficas de productos
  - Ahora las notas se crean dentro de un año
  - Añadido histórico de pagos con pagaré
  - Eliminado el campo codigo de la edición de productos de cliente
  - Eliminada la columna code de la lista de productos de cliente
  - Eliminar productos de cliente
  - Corregida la modificación de productos de cliente
  - Añadido totales de efectivo y de talones por trimestres
  - Al crear un albarán nuevo se abre la edición de fecha automáticamente

# [1.2.2] - 23/05/2021
  - Focus al añadir un producto al albarán de clientes

# [1.2.1] - 02/05/2021
  - Añadido número de facturas trimestrales a la facturación

# [1.2.0] - 18/04/2021
  - Añadida columna con el número de facturas en el listado de clientes
  - Al pulsar intro en el modal de añadir producto al albarán de cliente, se vacía el modal para añadir otro producto

# [1.1.3] - 18/03/2021
  - Al editar los totales de una factura se suma el total

# [1.1.2] - 17/03/2021
  - Ahora se puede editar los datos de las facturas confirmadas

# [1.1.1] - 16/03/2021
  - Cambiado el orden de precio y unidades en el modal de añadir producto a la factura de cliente
  - Cambiado "Kg" por "kg" en unidades por defecto de la factura de cliente
  - Actualización de librerias

# [1.1.0] - 27/02/2021
  - Añadida columna de iva a los productos del proveedor