@@ -3,7 +3,7 @@
   "author": "Eduardo Parra Mazuecos",
   "email": "eduparra90@gmail.com",
   "licence": "MIT",
-  "version": "1.3.3",
+  "version": "1.4.0",
   "private": true,
   "scripts": {
     "lint": "eslint ./src",
