@@ -1,0 +1,4 @@
+import { requestActions } from 'utils';
+
+export const GET_CLIENT_PAYMENTS = requestActions('@client-payments/GET_PAYMENTS');
+export const CONFIRM_CLIENT_PAYMENT = requestActions('@client-payments/CONFIRM_PAYMENT');
